2003-09-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PSDrawDoc.py: Change from Text/DrawDoc to BaseDoc
	* src/docgen/SvgDrawDoc.py: Change from Text/DrawDoc to BaseDoc

2003-09-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PaperMenu.py: Change from TextDoc to BaseDoc.
	* src/Report.py: Likewise.
	* src/SpreadSheetDoc.py: Likewise. 
	* src/StyleEditor.py: Likewise.
	* src/docgen/OpenSpreadSheet.py: Likewise.
	* src/docgen/AbiWord2Doc.py: Likewise.
	* src/plugins/AncestorReport.py: Likewise.
	* src/plugins/DescendReport.py: Likewise.
	* src/plugins/DetAncestralReport.py: Likewise.
	* src/plugins/DetDescendantReport.py: Likewise.
	* src/plugins/EventCmp.py: Likewise.
	* src/plugins/FamilyGroup.py: Likewise.
	* src/plugins/FtmStyleAncestors.py: Likewise.
	* src/plugins/GraphViz.py: Likewise.
	* src/plugins/IndivComplete.py: Likewise.
	* src/plugins/IndivSummary.py: Likewise.
	* src/plugins/WebPage.py: Likewise.
	* src/plugins/Ancestors.py: Likewise.
	* src/plugins/CustomBookText.py: Likewise.
	* src/BaseDoc.py: Likewise.

2003-09-01  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Separate paternal and maternal ancestors
	for easier reading.
	* src/Makefile.am: Ship BaseDoc.py.

2003-09-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: make Witness inherit from Persistant

2003-09-01  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/Makefile.am: Removed reference to PdfDrawDoc.py.

2003-08-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PdfDoc.py (left_print): Don't convert to cm.

2003-08-30  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/PdfDoc.py (page_break): Minor cleanup; 
	(end_page): Was defined twice -- remove the first occurence. 
	* src/gramps_main.py (load_selected_people): Only invoke Edit person 
	dialog if the active person is selection in the current alpha- page; 
	(change_alpha_page): Enable person-centered buttons only if the 